config/istio/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
  name: mcp-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp # for acessing MCP servers behind the MCP gateway
      hostname: 'mcp.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcp-servers-ext # for acessing MCP servers directly (testing purposes)
      hostname: '*.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps # for registering MCP servers
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: keycloak
      hostname: 'keycloak.127-0-0-1.sslip.io'
      port: 8889
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
